@@ -341,3 +341,4 @@
 
 - ==DATE== (4.2)
   - feature: added archivedir/archivecmd to the the main logfile
+  - feature: 99_Sunrise_EL.pm (does not need any Date modules)
